[project]
name = "multi-agent-red-teaming-system"
version = "0.1.0"
description = "Autonomous multi-agent red teaming system."
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.0",
    "langchain-core>=0.2.0",
    "langgraph-checkpoint-postgres>=0.0.5",
    "psycopg[binary,pool]>=3.1.18",
    "docker>=7.0.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-timeout>=2.3.0",
    "aiosqlite>=0.20.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.5.0",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "B"]
ignore = ["E501"]
